--- a/designesapp/static/css/index.css
+++ b/designesapp/static/css/index.css
@@ -1,34 +1,69 @@
+
+/*====================nav and slide start==========================*/
+.contain{
+    background-color:#37517e;
+}
+.des{
+    font-family: monotype corsiva;
+    color: aliceblue;
+    font-weight: bold;
+    text-shadow: 0px 2px 3px blueviolet;
+}
 .navv{
-    background-color:pink;
+    background-color:transparent;
 }
 #navbarSupportedContent ul li a{
     color: aliceblue;
 }
 #navbarSupportedContent ul li a:hover{
     border-bottom: 3px solid lightblue;
-    color: lightblue;
+    color: blueviolet;
     background-color: whitesmoke;
     border-radius:50px 50px 50px 50px;
 }
-.about
-{
-    background-color: pink;
-}
-.about h1{
-    color: aliceblue;
+.slidecontent{
+    font-weight: 700;
     font-family: 'Times New Roman', Times, serif;
-    border-bottom: 3px solid aliceblue;
-    font-weight: bold;
+    color: aliceblue;
+    align-items: justify;
 }
-.about1{
-    background-color: white;
-    border-radius:80px 80px 80px 80px;
+.slidecontent button{
+    background-color: #47b2e4;
+    color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+/*================================nav and slide end==========*/
+
+/*=====================about star============================*/
+.about h1{
+    color: #37517e;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-bottom: 3px solid #37517e;
+    font-weight: bolder;
+}
+.about:hover{
+    background:linear-gradient(#c2d3f0,whitesmoke,#d3ddee);
 }
 .about1 p{
-    font-size: 1.1rem;
-    line-height: 1.6;
+   /* font-size: 1.1rem;
+    line-height: 1.6;*/
     margin-bottom: 15px;
-    color:rgb(244, 127, 147);
     text-align: justify;
 
+}
+.about1 button{
+    border: 1px solid #47b2e4;
+    color: #47b2e4;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.about1 button:hover{
+    background-color: #47b2e4;
+    border: 1px solid #47b2e4;
+    color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+/*=================login start=================*/
+.login{
+    border: 2px solid lawngreen;
+    background-color: rgb(245, 245, 245,0.3);
 }
