--- a/designesapp/templates/index.html
+++ b/designesapp/templates/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bold mt-2">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'index'%}">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#aboutt">About</a>
@@ -135,6 +135,35 @@
 
 
     <!-- =============================================================login end=============================================================== -->
+
+
+    <!-- ==============================================================footer start====================================================== -->
+    <div class="container-fluid footer shadow-lg">
+      <div class="row m-5">
+        <div class="col-md-4">
+          <span class="des fs-2">Design Exhibition Space</span>
+        </div>
+        <div class="col-md-4 mt-3">
+          <h5>Quick Access</h5>
+          <ul>
+            <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="#aboutt">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Login</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 mt-3">
+          <h5>Our Services</h5>
+          <ul>
+            <li><a href="{% url 'index' %}">Portfolio</a></li>
+            <li><a href="#aboutt">Resumes</a></li>
+            <li><a href="">Card</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- ===============================================================footer end===================================================== -->
   </div>
   <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
