--- a/designesapp/templates/resume1.html
+++ b/designesapp/templates/resume1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  {% load static %}
 <head>
   <meta charset="UTF-8">
   <title>Resume</title>
@@ -12,7 +13,7 @@
 
       <!-- Left Column -->
       <div class="left-column" style="width: 35%; background-color: #264653; color: white; padding: 30px 20px;">
-        <img src="img/profile pic.jpeg" alt="Profile Photo" style="width: 170px; height: 170px; border-radius: 50%; margin-bottom: 20px; margin-left: 30px">
+        <img src={% "img/profile pic.jpeg" %} alt="Profile Photo" style="width: 170px; height: 170px; border-radius: 50%; margin-bottom: 20px; margin-left: 30px">
 
         <div class="left-section" style="margin-bottom: 30px; ">
           <h6 style="border-bottom: 1px solid #ccc; padding-bottom: 5px; margin-bottom: 10px; font-weight: bold; color: #f4a261;">CONTACT</h6>
