--- a/designesapp/static/css/index.css
+++ b/designesapp/static/css/index.css
@@ -1,33 +1,38 @@
-
 /*====================nav and slide start==========================*/
-.contain{
-    background-color:#37517e;
+.contain {
+    background-color: #37517e;
 }
-.des{
+
+.des {
     font-family: monotype corsiva;
     color: aliceblue;
     font-weight: bold;
     text-shadow: 0px 2px 3px blueviolet;
 }
-.navv{
-    background-color:transparent;
+
+.navv {
+    background-color: transparent;
 }
-#navbarSupportedContent ul li a{
+
+#navbarSupportedContent ul li a {
     color: aliceblue;
 }
-#navbarSupportedContent ul li a:hover{
+
+#navbarSupportedContent ul li a:hover {
     border-bottom: 3px solid lightblue;
     color: blueviolet;
     background-color: whitesmoke;
-    border-radius:50px 50px 50px 50px;
+    border-radius: 50px 50px 50px 50px;
 }
-.slidecontent{
+
+.slidecontent {
     font-weight: 700;
     font-family: 'Times New Roman', Times, serif;
     color: aliceblue;
     align-items: justify;
 }
-.slidecontent button{
+
+.slidecontent button {
     background-color: #47b2e4;
     color: whitesmoke;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -35,60 +40,103 @@
 /*================================nav and slide end==========*/
 
 /*=====================about star============================*/
-.about h1{
+.about h1 {
     color: #37517e;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-bottom: 3px solid #37517e;
     font-weight: bolder;
 }
-.about:hover{
-    background:linear-gradient(#c2d3f0,whitesmoke,#d3ddee);
+
+.about:hover {
+    background: linear-gradient(#c2d3f0, whitesmoke, #d3ddee);
 }
-.about1 p{
-   /* font-size: 1.1rem;
+
+.about1 p {
+    /* font-size: 1.1rem;
     line-height: 1.6;*/
     color: rgb(18, 18, 18);
     margin-bottom: 15px;
     text-align: justify;
 
 }
-.about1 button{
+
+.about1 button {
     border: 1px solid #47b2e4;
     color: #47b2e4;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.about1 button:hover{
+
+.about1 button:hover {
     background-color: #47b2e4;
     border: 1px solid #47b2e4;
     color: whitesmoke;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 /*=================login start=================*/
-.login{
+.login {
     border: 2px solid lawngreen;
-    background-color: rgb(245, 245, 245,0.3);
+    background-color: rgb(245, 245, 245, 0.3);
 }
 
 /*==================footer stat=======================*/
+.footer {
+    background-color: whitesmoke;
+}
 
-.footer span
-{
+.footer span {
     color: #37517e;
 }
-.footer h5{
+
+.footer h5 {
     color: #37517e;
     font-weight: bold;
 }
-.footer ul li{
+
+.footer ul li {
     list-style-type: none;
 
 }
-.footer ul li a{
+
+.footer ul li a {
     text-decoration: none;
     color: black;
 }
-.footer ul li a:hover{
+
+.footer ul li a:hover {
     color: #37517e;
     font-weight: bolder;
 }
+
+.copyright {
+    background-color: #37517e;
+    border: 1px dotted limegreen;
+    color: aliceblue;
+}
+
 /*========================footer end==================*/
+/* =================services start================= */
+.card {
+    display: flex;
+    background-color: whitesmoke;
+    border: 1px solid lawngreen;
+}
+
+.card h3 {
+    color: #37517e;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+}
+
+.card button {
+    background-color: #47b2e4;
+    border: 1px solid white;
+}
+
+.card button a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+/* ===================services end========================= */a
